--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "servertest",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
